name:            wai-middleware-oauth2
version:         0.1
cabal-version:   >= 1.8
license:         MIT
license-file:    LICENSE.md
category:        Web
copyright:       © 2014 Matthew Green
author:          Matthew Green <babygguy@gmail.com>
maintainer:      Matthew Green <babygguy@gmail.com>
stability:       experimental
tested-with:     GHC == 7.6.3
synopsis:        OAuth2 middleware for WAI
homepage:        https://github.com/nerdgguy/wai-middleware-oauth2
bug-reports:     https://github.com/nerdgguy/wai-middleware-oauth2/issues
build-type:      Simple
description:
        OAuth2 middleware for wai
        .
        See example/simple.hs for example usage.

extra-source-files:
  README.md
  LICENSE.md

source-repository head
  type:     git
  location: git://github.com/NerdGGuy/wai-middleware-oauth2.git

Flag examples
  Description: Build the example executables
  Default: False

library
  exposed-modules:
    Network.Wai.Middleware.OAuth2

  build-depends:
    base              >=4.5 && <5,
    http-types        >= 0.8    && < 0.9,
    bytestring        >= 0.9    && < 0.11,
    aeson             >= 0.7    && < 0.8,
    wai               >= 3.0.0  && < 3.1,
    wai-test,
    transformers,
    errors,
    hoauth2,
    http-conduit

  hs-source-dirs: src

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-unused-do-bind

test-suite test-oauth2
  build-depends:
    base              >=4.5 && <5,
    http-types        >= 0.8    && < 0.9,
    bytestring        >= 0.9    && < 0.11,
    wai               >= 3.0.0  && < 3.1,
    wai-middleware-oauth2,
    QuickCheck,
    wai-extra,
    hoauth2

  type: exitcode-stdio-1.0

  main-is: test.hs

  hs-source-dirs: test

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-unused-do-bind

Executable simple
  if flag(examples)
    Buildable: True
    Build-Depends:
      base              >=4.5     && < 5,
      http-types        >= 0.8    && < 0.9,
      bytestring        >= 0.9    && < 0.11,
      wai               >= 3.0.0  && < 3.1,
      wai-middleware-oauth2,
      wai-extra,
      text,
      warp              >= 3.0.0  && < 3.1,
      warp-tls          >= 3.0.0  && < 3.1,
      http-types,
      QuickCheck,
      hoauth2,
      errors,
      http-conduit

  else
    Buildable: False

  Main-Is:        simple.hs

  Hs-Source-Dirs: example

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-unused-do-bind